[gd_scene load_steps=16 format=3 uid="uid://b6fxibbuh2g66"]

[ext_resource type="PackedScene" uid="uid://c1xj0adwmmnsc" path="res://Scenes/Turrets/turret.tscn" id="1_6161y"]
[ext_resource type="PackedScene" uid="uid://nkx7sbrvnbvx" path="res://Scenes/Turrets/damage_area.tscn" id="2_7ydrm"]
[ext_resource type="Texture2D" uid="uid://ywgb5ywgyh38" path="res://Sprites/entoloma_hochstetteri_1.png" id="3_g1bxv"]
[ext_resource type="Script" uid="uid://d03j3ow45in21" path="res://Scenes/Turrets/grow_mushroom.gd" id="3_iefer"]
[ext_resource type="Texture2D" uid="uid://4pes4axil5m" path="res://Sprites/entoloma_hochstetteri_0.png" id="4_5cd6y"]
[ext_resource type="Texture2D" uid="uid://bfblkrur5h6fx" path="res://Sprites/entoloma_hochstetteri_2.png" id="4_rfpoa"]
[ext_resource type="Texture2D" uid="uid://dg50cpoilsxmj" path="res://Sprites/entoloma_hochstetteri_3.png" id="5_iefer"]
[ext_resource type="Texture2D" uid="uid://dioay22aarlm" path="res://Sprites/entoloma_hochstetteri_4.png" id="6_5cd6y"]
[ext_resource type="Texture2D" uid="uid://c8dg1kkn5kmw4" path="res://Sprites/entoloma_hochstetteri_5.png" id="7_052bw"]
[ext_resource type="Script" uid="uid://djtfwistk4swl" path="res://Scenes/Turrets/grow_stage_animator.gd" id="8_rfpoa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5cd6y"]
resource_local_to_scene = true
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_iefer"]
radius = 22.090721

[sub_resource type="SpriteFrames" id="SpriteFrames_8pot8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_5cd6y")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_g1bxv")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_rfpoa")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_iefer")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_5cd6y")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_052bw")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5cd6y"]
bg_color = Color(0, 0, 0, 0.7058824)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_052bw"]
bg_color = Color(0.34783167, 0.7750422, 0.99999994, 1)

[node name="GrowMushroom" instance=ExtResource("1_6161y")]
script = ExtResource("3_iefer")
max_hp = 5
type = 7

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource("CircleShape2D_5cd6y")

[node name="Sprite2D" parent="." index="2"]
texture = null

[node name="DamageArea" parent="." index="3" instance=ExtResource("2_7ydrm")]
unique_name_in_owner = true
damage = 6

[node name="CollisionShape2D" parent="DamageArea" index="0"]
position = Vector2(16, 16)
shape = SubResource("CircleShape2D_iefer")

[node name="GrowController" type="Node2D" parent="." index="4"]

[node name="GrowStage" type="AnimatedSprite2D" parent="GrowController" index="0"]
sprite_frames = SubResource("SpriteFrames_8pot8")
animation = &"5"
offset = Vector2(16, -16)
script = ExtResource("8_rfpoa")

[node name="GrowTimer" type="Timer" parent="GrowController" index="1"]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="GrowController" index="2"]
unique_name_in_owner = true
offset_left = 2.0
offset_top = 27.0
offset_right = 30.0
offset_bottom = 31.0
theme_override_styles/background = SubResource("StyleBoxFlat_5cd6y")
theme_override_styles/fill = SubResource("StyleBoxFlat_052bw")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="HeadPositions" type="Node2D" parent="." index="5"]

[node name="1" type="Marker2D" parent="HeadPositions" index="0"]
position = Vector2(15, 15)

[node name="2" type="Marker2D" parent="HeadPositions" index="1"]
position = Vector2(23, 13)

[node name="3" type="Marker2D" parent="HeadPositions" index="2"]
position = Vector2(20, 6)

[node name="4" type="Marker2D" parent="HeadPositions" index="3"]
position = Vector2(6, 11)

[node name="5" type="Marker2D" parent="HeadPositions" index="4"]
position = Vector2(12, 1)

[node name="HpBar" parent="." index="6"]
visible = false

[connection signal="timeout" from="GrowController/GrowTimer" to="." method="_on_grow_timer_timeout"]

[editable path="DamageArea"]
